[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/pause/pause.gd" type="Script" id=1]
[ext_resource path="res://themes/menu_theme/menu_theme.tres" type="Theme" id=2]

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0.329412 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 100.0
margin_top = 24.0
margin_right = 156.0
margin_bottom = 125.0
theme = ExtResource( 2 )

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 56.0
margin_bottom = 31.0
text = "Resume"
icon_align = 1

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 56.0
margin_bottom = 66.0
text = "Options"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 56.0
margin_bottom = 101.0
theme = ExtResource( 2 )
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
